<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffbc04e5"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/guide_title" />

    <TextView
        style="@style/SetupGuideContent"
        android:text="@string/guide3_content" />

    <EditText
        android:id="@+id/et_guide3_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/guide3_item1" />

    <Button
        android:id="@+id/btn_guide3_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guide3_item2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hello_world"
            android:src="@android:drawable/presence_invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hello_world"
            android:src="@android:drawable/presence_invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hello_world"
            android:src="@android:drawable/presence_online" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hello_world"
            android:src="@android:drawable/presence_invisible" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="5dp" >

        <Button
            style="@style/SetupGuidePre"
            android:text="@string/pre" 
            android:onClick="preGuide"/>

        <Button
            style="@style/SetupGuideNext"
            android:text="@string/next" 
            android:onClick="nextGuide"/>
    </RelativeLayout>

</LinearLayout>