<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffbc04e5"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/guide_title" />

    <TextView
        style="@style/SetupGuideContent"
        android:text="@string/guide4_content" />

    <CheckBox
        android:id="@+id/cb_guide4_setup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/guide4_item1"
        android:textColor="#ff0000"
        android:textSize="18sp" />

    <!-- 显示设置进度的图标 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hello_world"
            android:src="@android:drawable/presence_invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hello_world"
            android:src="@android:drawable/presence_invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hello_world"
            android:src="@android:drawable/presence_invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hello_world"
            android:src="@android:drawable/presence_online" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="5dp" >

        <Button
            style="@style/SetupGuidePre"
            android:text="@string/pre" 
            android:onClick="preGuide"/>

        <Button
            style="@style/SetupGuideNext"
            android:text="@string/finish" 
            android:onClick="confirm"/>
    </RelativeLayout>
</LinearLayout>