<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_atool_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_backgroud_selector"
        android:text="@string/query"
        android:textSize="24sp" 
        android:padding="5dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#aabc04e5" />

    <RelativeLayout
        android:id="@+id/rl_atool_number_service_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_backgroud_selector" 
        android:padding="5dp">

        <LinearLayout
            android:layout_width="280dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="280dip"
                android:layout_height="wrap_content"
                android:text="@string/number_service"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_atool_number_service_state"
                android:layout_width="280dip"
                android:layout_height="wrap_content"
                android:text="@string/number_service_state_no"
                android:textColor="#ffff0000"
                android:textSize="14sp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_atool_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="false" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#aabc04e5" />

    <TextView
        android:id="@+id/tv_atool_select_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_backgroud_selector"
        android:text="@string/select_bg"
        android:textSize="24sp" 
        android:padding="5dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#aabc04e5" />

    <TextView
        android:id="@+id/tv_atool_change_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_backgroud_selector"
        android:text="@string/number_display"
        android:textSize="24sp" 
        android:padding="5dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#aabc04e5" />

    <TextView
        android:id="@+id/tv_atool_app_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_lock"
        android:textSize="24sp" 
        android:background="@drawable/item_backgroud_selector"
        android:padding="5dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#aabc04e5" />

</LinearLayout>