<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
    <include layout="@layout/title"
        android:layout_width="fill_parent"
        android:layout_height="40dp"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">
        
        <ImageView 
            android:id="@+id/iv_lock_app_icon"
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:src="@drawable/logo"
            android:contentDescription="@string/hello_world"/>
        
        <TextView
            android:id="@+id/tv_lock_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:textColor="#ffbc04e5"
            android:text="@string/hello_world"/>
        
    </LinearLayout>
    
    <EditText 
        android:id="@+id/et_lock_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:hint="@string/inputPassword"
        android:inputType="textPassword"/>
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/protectedYes"
        android:onClick="confirm"/>
</LinearLayout>
